[package]
name = "lambdust"
version = "0.1.0"
edition = "2024"
description = "A simple lambda calculus interpreter"
authors = ["Binghan <binghan1227@gmail.com>"]
license = "MIT"
repository = "https://github.com/binghan1227/lambdust"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
